# rscp-lib

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
rscp_lib/: RscpConnection.py  RscpEncryption.py  RscpFrame.py  RscpTags.py  RscpValue.py  __init__.py
tests/: conftest.py  test_connection.py  test_encryption.py  test_frame.py  test_tags.py  test_value.py
